5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1650_651.log
== SUBMITION (2019-04-11 19:53:54) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=a-44.7
pm=a-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(pf)
	
	
-- EXECUTION TIME:
0.207518
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
-43.7
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
-56.766
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:53:57) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=a-44.7
pm=a-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(pf)
	
	
-- OUTPUT:
-43.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:09) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(pf)
	
	
-- EXECUTION TIME:
0.142446
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:11) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(pf)
	
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:35) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2)
	
	
-- EXECUTION TIME:
0.156649
-- ERROR:
  File "/home/codebench/codes/1650/651/main.py", line 12
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:39) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- EXECUTION TIME:
0.15108
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:43) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:51) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:54) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- EXECUTION TIME:
0.141957
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:54) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:56) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- EXECUTION TIME:
0.137226
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:56) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:57) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- EXECUTION TIME:
0.164353
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.711799999999997
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:57) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(pm)
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- OUTPUT:
17.4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:57:20) 
-- CODE:
a=float(input("altura    "))
b=input("sexo  M   OU    F   ")
pf=(62.1*a)-44.7
pm=(72.7*a)-58
if(b.upper()=="M"):
	print(round(pm,2))
else:
	if(b.upper()=="F"):
		print(round(pf,2))
	
	
-- EXECUTION TIME:
0.306183
-- TEST CASE 1:
---- input:
1.0
F
---- correct output:
17.4
---- user output:
17.4
-- TEST CASE 2:
---- input:
1.234
M
---- correct output:
31.71
---- user output:
31.71
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
